; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_try_free_query.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_try_free_query.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @try_free_query(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.rpc_query*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call %struct.rpc_query* @rpc_query_get(i64 %4)
  store %struct.rpc_query* %5, %struct.rpc_query** %3, align 8
  %6 = load %struct.rpc_query*, %struct.rpc_query** %3, align 8
  %7 = icmp ne %struct.rpc_query* %6, null
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.rpc_query*, %struct.rpc_query** %3, align 8
  %10 = call i32 @rpc_query_delete(%struct.rpc_query* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local %struct.rpc_query* @rpc_query_get(i64) #1

declare dso_local i32 @rpc_query_delete(%struct.rpc_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
